--- a/Courses/ECON_8080_Spring_2023/01_linear_regression.html
+++ b/Courses/ECON_8080_Spring_2023/01_linear_regression.html
@@ -424,10 +424,12 @@ textbook though related to H: 2.30).</p></li>
 Algebra of Least Squares</a> (These notes cover chapter 3 in the book.
 Please read the entire chapter, but pay particular attention to the
 sections covered in the notes.)</p></li>
+<li><p><a href="01_linear_regression_notes_4.pdf">Lecture Notes 4: Least
+Squares Regression</a> (These notes cover chapter 4 in the book. Please
+read the entire chapter, but pay particular attention to the sections
+covered in the notes.)</p></li>
 </ul>
 <!--
-* [Lecture Notes 4: Least Squares Regression](01_linear_regression_notes_4.pdf) (These notes cover chapter 4 in the book.  Please read the entire chapter, but pay particular attention to the sections covered in the notes.)
-
 * [Lecture Notes 5: Asymptotic Theory for Least Squares](01_linear_regression_4.pdf) (These notes cover chapters 6 and 7 in the book.  Please read the entire chapters, but pay particular attention to the sections covered in the notes.)
 
 -->
