--- a/Courses/ECON_8080_Spring_2023/02_resampling_methods.html
+++ b/Courses/ECON_8080_Spring_2023/02_resampling_methods.html
@@ -11,7 +11,7 @@
 
 
 
-<title>ECON 8080 Course Material</title>
+<title>Topic 3: Resampling Methods</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -354,66 +354,32 @@ pre code {
 
 
 
-<h1 class="title toc-ignore">ECON 8080 Course Material</h1>
+<h1 class="title toc-ignore">Topic 3: Resampling Methods</h1>
 
 </div>
 
 
+<div id="material-covered-in-class" class="section level1">
+<h1>Material covered in class</h1>
 <ul>
-<li><a href="syllabus.pdf">Syllabus</a></li>
-</ul>
-<div id="homeworks" class="section level1">
-<h1>Homeworks</h1>
-<p><a href="hw1.html">HW 1</a>, due Tuesday, Jan. 31, [[<a href="hw1_sol.pdf">solutions</a>]]</p>
-<p><a href="hw2.html">HW 2</a>, due Thursday, Feb. 9, [[<a href="hw2_sol.pdf">solutions</a>]]</p>
-<ul>
-<li><a href="cps09mar.dta">cps09mar.dta</a></li>
-</ul>
-<p><a href="hw3.html">HW 3</a>, due Thursday, Mar. 2</p>
-</div>
-<div id="additional-material-for-midterm-1" class="section level1">
-<h1>Additional Material for Midterm 1</h1>
-<ul>
-<li><p>Midterm 1 covers the course lecture notes 1-4 / the first 4
-chapters of Hansen.</p></li>
-<li><p><a href="additional_practice1.html">Additional Practice Questions
-for Midterm 1</a>, these do not need to be turned in, [[<a href="additional_practice1_sol.pdf">solutions</a>]]</p></li>
+<li><p>H 10.1, 10.6, 10.7, 10.9-10.12, 10.28</p></li>
+<li><p><a href="03_resampling_methods_notes.pdf">Notes</a></p></li>
+<li><p><a href="bootstrap_example.R">Bootstrap Example Code</a></p></li>
 </ul>
 </div>
-<div id="course-material" class="section level1">
-<h1>Course Material</h1>
-<p>We will cover the following topics:</p>
-<p>(<span style="color: red; font-weight: bold;">Note:</span> Some of
-the material will be updated/expanded as we move through the semester.
-Some of the topics at the end of the semester are tentative.)</p>
-<ol start="0" style="list-style-type: decimal">
-<li><p><a href="introduction_to_R.html">Introduction to R</a></p></li>
-<li><p><a href="01_linear_regression.html">Linear
-Regression</a></p></li>
-</ol>
-<!--2. [Inference/Hypothesis Testing](02_hypothesis_testing.html)-->
-<ol start="2" style="list-style-type: decimal">
-<li><p><a href="03_resampling_methods.html">Resampling
-Methods</a></p></li>
-<li><p><a href="04_nonlinear_models.html">Introduction to Nonlinear
-Models</a></p></li>
-<li><p><a href="05_alternative_causal_inference.html">Alternative
-Approaches to Causal Inference</a></p></li>
-<li><p><a href="06_panel_data_causal_inference.html">Panel Data
-Approaches to Causal Inference</a></p></li>
-<li><p>If we have time, an introduction to [Generalized Method of
-Moments]</p></li>
-<li><p>If we have time, an introduction to [Quantile
-Regression]</p></li>
-<li><p>If we have time, an introduction to [Nonparametric
-Regression]</p></li>
-</ol>
-</div>
-<div id="slides" class="section level1">
-<h1>Slides</h1>
+<div id="additional-material" class="section level1">
+<h1>Additional material</h1>
 <ul>
-<li>First Week: <a href="introduction_slides.html">Introduction to ECON
-8080</a></li>
+<li><p>I am mainly going to provide an introduction to the bootstrap and
+an explanation for why the bootstrap works. The textbook has a very
+detailed discussion of this material in Chapter 10. I also used Kline
+and Santos (2012), which I posted on ELC, in order to help write the
+notes.</p></li>
+<li><p>The textbook provides a lot of interesting details that I will
+not cover in class. In particular, if you are interested, I think it is
+worthwhile to read sections 10.3-10.4 (about the jackknife), 10.8 (about
+percentile intervals), and 10.21-10.22 (about hypothesis
+testing)</p></li>
 </ul>
 </div>
 
