--- a/Courses/ECON_8080_Spring_2023/01_linear_regression.html
+++ b/Courses/ECON_8080_Spring_2023/01_linear_regression.html
@@ -269,8 +269,8 @@ pre code {
   border-radius: 4px;
 }
 
-.tabset-dropdown > .nav-tabs > li.active:before {
-  content: "";
+.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "\e259";
   font-family: 'Glyphicons Halflings';
   display: inline-block;
   padding: 10px;
@@ -278,16 +278,9 @@ pre code {
 }
 
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-  content: "";
-  border: none;
-}
-
-.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-  content: "";
+  content: "\e258";
   font-family: 'Glyphicons Halflings';
-  display: inline-block;
-  padding: 10px;
-  border-right: 1px solid #ddd;
+  border: none;
 }
 
 .tabset-dropdown > .nav-tabs > li.active {
@@ -428,11 +421,11 @@ sections covered in the notes.)</p></li>
 Squares Regression</a> (These notes cover chapter 4 in the book. Please
 read the entire chapter, but pay particular attention to the sections
 covered in the notes.)</p></li>
+<li><p><a href="01_linear_regression_4.pdf">Lecture Notes 5: Asymptotic
+Theory for Least Squares</a> (These notes cover chapters 6 and 7 in the
+book. Please read the entire chapters, but pay particular attention to
+the sections covered in the notes.)</p></li>
 </ul>
-<!--
-* [Lecture Notes 5: Asymptotic Theory for Least Squares](01_linear_regression_4.pdf) (These notes cover chapters 6 and 7 in the book.  Please read the entire chapters, but pay particular attention to the sections covered in the notes.)
-
--->
 </div>
 <div id="additional-material" class="section level1">
 <h1>Additional material</h1>
